<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.den.vkconect.Status">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/activity"
                android:textAlignment="textStart"
                android:textColor="@color/vk_white"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/time"
                android:textAlignment="textStart"
                android:textColor="@color/vk_white" />

            <TextView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/IP"
                android:textAlignment="textStart"
                android:textColor="@color/vk_white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorFonStat"
                android:text="@string/upload_picture"
                android:textAlignment="textStart"
                android:textSize="12sp"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/timePict"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorFonStat"
                android:text="-"
                android:textAlignment="textStart"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/IPPict"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorFonStat"
                android:text="-"
                android:textAlignment="textStart"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/upload_status"
                android:background="@color/vk_white"
                android:textAlignment="textStart"
                android:textSize="12sp"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/timeStat"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="-"
                android:background="@color/vk_white"
                android:textAlignment="textStart"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/IPStut"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="-"
                android:background="@color/vk_white"
                android:textAlignment="textStart"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorFonStat"
                android:text="@string/upload_picture_and_status"
                android:textAlignment="textStart"
                android:textSize="12sp"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/timePictAndStat"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorFonStat"
                android:text="-"
                android:textAlignment="textStart"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/IPPictAndStut"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorFonStat"
                android:text="-"
                android:textAlignment="textStart"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>